<resources>
    <string name="app_name">CapstoneStage2</string>
    <string name="txt_descrition_app">N\'trip is an app destined to bring people\nwith common interests in everyday\nthings together to take trips</string>
    <string name="name_app">n\'trip</string>
    <string name="fb_id">210846839256592</string>
    <string name="about_us">nTrip is an app destined to bring people with common interests in everyday things together to take trips.\n\nnTrip allows users to create trip plans to different places and different purposes ,invite people you may on may not know before.\n\nnTrip is designed to make sure you don\'t take your next skiing trip alone again. Plan a trip post it invite people meet new friends have fun</string>
    <string name="content_pager">Pager for Preview Photo</string>
    <string name="txt_trip">NEW TRIP</string>
    <string name="txt_feed">FEED</string>
    <string name="txt_discovery_text">DISCOVER</string>
    <string name="profile_text">PROFILE</string>
    <string name="txt_actionbar_aboutus">About Us</string>
    <string name="create_trip_text">CREATE TRIP</string>
    <string name="txt_date_hint">Date</string>
    <string name="pick_up_text">Pick Up</string>
    <string name="location_text">Location</string>
    <string name="invite_friends_text">Invite Friends</string>
    <string name="create_trip_text_button">CREATE TRIP</string>
    <string name="detail_text">MAP</string>
    <string name="detail_trip_text">DETAILS</string>
    <string name="map_text">MAP</string>
    <string name="text_action_bar_invite_frineds">Invite Friends</string>
    <string name="settings_text">SETTINGS</string>
    <string name="my_account_text">My Account</string>
    <string name="notification_text">Notification</string>
    <string name="send_feedback_text">Send FeedBack</string>
    <string name="about_us_text">About Us</string>
    <string name="join_friends_text">JOINED FRIENDS</string>
    <string name="v_text">V</string>
    <string name="transparent_image">transparent image</string>
    <string name="action_bar_about_us">About Us Action Bar</string>
    <string name="back_button">back button</string>
    <string name="title_about_us">title for about us</string>
    <string name="desc_about_us">description for about us app</string>
    <string name="create_trip_back">create trip background</string>
    <string name="action_bar_create_trip">action bar create trip</string>
    <string name="title_create_trip">title of create trip</string>
    <string name="content_create_trip">content of create trip</string>
    <string name="edit_text_name">edit text name trip</string>
    <string name="type_of_trip">type of trip</string>
    <string name="date_trip">date for trip</string>
    <string name="location_trip">location trip</string>
    <string name="pick_up_trip">pick up trip</string>
    <string name="invite_friends_button">invite friends</string>
    <string name="create_trip_button">create trip</string>
    <string name="loader_response">loader for waiting response data</string>
    <string name="action_bar_detail">action bar for detail</string>
    <string name="title_google_detail_map">title for detail google map</string>
    <string name="img_backround_trip">img Background Trip</string>
    <string name="detail_action_bar">ActionBar Detail Trip</string>
    <string name="title_detail_trip">title of detail trip</string>
    <string name="list_detail_trip">list of detail trip</string>
    <string name="header_detail_trip">Header detail trip</string>
    <string name="content_detail_trip">content of detail trip</string>
    <string name="profile_image_detail_trip">profile image detail trip</string>
    <string name="creator_name">creator name of trip</string>
    <string name="name_trip">Name of trip</string>
    <string name="join_trip">join trip</string>
    <string name="bottom_bar">bottom bar for google map</string>
    <string name="joined_container">joined container friends</string>
    <string name="text_joined">text of joined friends</string>
    <string name="fake_icon">fake icon</string>
    <string name="cell_detail_trip">cell for detail trip</string>
    <string name="profile_pic_detail">profile picture in cell</string>
    <string name="name_user_joned">name people joined</string>
    <string name="cell_discovery">Cell Discovery</string>
    <string name="background_pic">background picture trip</string>
    <string name="view_for_split">view for split textView</string>
    <string name="discovery_feed">Discovery Feed</string>
    <string name="view_empty">view empty</string>
    <string name="sub_header">sub header for discovery</string>
    <string name="discovery_title">discovery title</string>
    <string name="discovery_sub_title">DISCOVERY</string>
    <string name="open_menu">button for open menu</string>
    <string name="list_for_discovery">list view for discovery</string>
    <string name="menu_discovery">menu for discovery</string>
    <string name="list_view_trip">list for view type trip</string>
    <string name="cell_feed">cell feed</string>
    <string name="header_feed">feed screen header</string>
    <string name="trip_title">trips title</string>
    <string name="list_feed">list for feed</string>
    <string name="pager_fragment_holder">pager fragment holder</string>
    <string name="bottom_bar_fragment">bottom bar holder fragment</string>
    <string name="create_trip_icon">Create trip icon</string>
    <string name="txt_for_icon">text for icon</string>
    <string name="feed_icon">feed icon</string>
    <string name="discovery_icon">discovery icon</string>
    <string name="profile_icon">profile icon</string>
    <string name="action_bar_google_map">action bar for google map</string>
    <string name="title_google_map">title of google map</string>
    <string name="header_invite_trip">Header of invite trip</string>
    <string name="titile_friends">invite friends title</string>
    <string name="list_for_invite_trip">list of invite friends</string>
    <string name="invite_cell">invite cell</string>
    <string name="profile_pic_invite">profile pic for invite cell</string>
    <string name="name_of_invited_friends">name of invited friends</string>
    <string name="button_invite_friends">invite friends button</string>
    <string name="logo_app">logo of app</string>
    <string name="content_trip">content of trip</string>
    <string name="facebook_button">facebook log in button</string>
    <string name="circle_page">Circle Page Indicator</string>
    <string name="menu_trip_cell">Cell Menu Trip</string>
    <string name="name_of_trip">name of type trip</string>
    <string name="my_account_profile_pic">my account profile pic</string>
    <string name="name_profile">name of profile</string>
    <string name="email_user">email of user</string>
    <string name="cell_profile">cell profile</string>
    <string name="background_image_profile">background image for profile cell</string>
    <string name="list_profile">list for profile</string>
    <string name="header_profile_screen">header profile screen</string>
    <string name="upcomming_text">UPCOMING</string>
    <string name="your_trips_text">YOUR TRIPS</string>
    <string name="previous_text">PREVIOUS</string>
    <string name="background_profile">Background Profile</string>
    <string name="button_settings">button settings</string>
    <string name="profile_name">profile name</string>
    <string name="profile_pic_screen">profile picture profile screen</string>
    <string name="container_trips">container trips</string>
    <string name="container_up">container upcoming</string>
    <string name="upcoming_trips">upcoming trips text</string>
    <string name="number_upcoming_trips">number of upcoming tips</string>
    <string name="container_your_trips">container your trips</string>
    <string name="your_trips">your trips title</string>
    <string name="your_trips_number">your trips number</string>
    <string name="container_preview">container preview trips</string>
    <string name="previous_trips">previous trips</string>
    <string name="previous_tips_number">previous trips number</string>
    <string name="action_bar_settings">action bar settings</string>
    <string name="title_settings">title settings</string>
    <string name="content_settings">content settings</string>
    <string name="container_my_account">container my account</string>
    <string name="container_text">container text</string>
    <string name="container_notification">container notification</string>
    <string name="container_text_notification">container text notification</string>
    <string name="container_send_feed_back">container send feed back</string>
    <string name="text_feed_back">container text send feedback</string>
    <string name="toggle_button">toggle button</string>
    <string name="view_pager_image">view pager imageview</string>

    <string name="banner_ad_unit_id">ca-app-pub-9349545836979623/2028029993</string>
    <string name="banner_text">BANNER</string>
    <string name="refresh">Refresh</string>
    <string name="test_data">Durim aliu</string>
    <string name="test_data_type">skiing</string>

</resources>
