<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/rlDiscoveryFeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/discovery_feed"
        app:layout_heightPercent="11%">

        <View
            android:id="@+id/viewEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/view_empty"
            app:layout_heightPercent="40%" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/viewEmpty"
            android:contentDescription="@string/sub_header">

            <TextView
                android:id="@+id/txtDiscovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/discovery_title"
                android:text="@string/discovery_sub_title"
                android:textColor="@color/txt_trip"
                android:textSize="@dimen/text_size_title_discovery"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgMenu"
                android:layout_width="@dimen/menu_button_dimes"
                android:layout_height="@dimen/menu_button_dimes"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/margin_button_menu"
                android:background="@android:color/transparent"
                android:contentDescription="@string/open_menu"
                android:src="@mipmap/feed" />

        </RelativeLayout>

    </android.support.percent.PercentRelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/discoveryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlDiscoveryFeed"
        android:contentDescription="@string/list_for_discovery" />

    <RelativeLayout
        android:id="@+id/rlMenu"
        android:layout_width="@dimen/menu_width"
        android:layout_height="@dimen/menu_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlDiscoveryFeed"
        android:contentDescription="@string/menu_discovery"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleViewTypeTrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/list_view_trip" />
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Small"
        android:layout_width="@dimen/progress_bar_dimension"
        android:layout_height="@dimen/progress_bar_dimension"
        android:layout_centerInParent="true"
        android:contentDescription="@string/loader_response"
        android:visibility="gone" />
</android.support.percent.PercentRelativeLayout>