<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgBackgroundTrip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_backround_trip"
        android:scaleType="centerCrop"
        android:src="@mipmap/fblogin_one" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/img_transparent"
        android:contentDescription="@string/transparent_image" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:contentDescription="@string/detail_action_bar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/btnBackDetailTrip"
            android:layout_width="@dimen/width_back_button"
            android:layout_height="@dimen/height_back_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@mipmap/back_button" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_detail"
            android:contentDescription="@string/title_detail_trip"
            android:text="@string/detail_trip_text"
            android:textColor="@color/white_background"
            android:textSize="@dimen/text_size_detail_trip"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/detailRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar"
        android:contentDescription="@string/list_detail_trip" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Small"
        android:layout_width="@dimen/progress_bar_dimension"
        android:layout_height="@dimen/progress_bar_dimension"
        android:layout_centerInParent="true"
        android:contentDescription="@string/loader_response"
        android:visibility="gone" />
</RelativeLayout>