<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fblogin_two"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_image"
        android:contentDescription="@string/transparent_image" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:contentDescription="@string/action_bar_about_us"
        app:contentInsetLeft="@dimen/zero_dep"
        app:contentInsetStart="@dimen/zero_dep">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/width_back_button"
            android:layout_height="@dimen/height_back_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@mipmap/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_detail"
            android:contentDescription="@string/title_about_us"
            android:text="@string/txt_actionbar_aboutus"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/text_size_about_us" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginEnd="@dimen/right_about_us"
        android:layout_marginStart="@dimen/left_about_us"
        android:layout_marginTop="@dimen/top_about_us"
        android:contentDescription="@string/desc_about_us"
        android:text="@string/about_us"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/text_size_description_about_us" />

</RelativeLayout>