<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fblogin_two"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_image"
        android:contentDescription="@string/transparent_image" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:contentDescription="@string/action_bar_about_us"
        app:contentInsetLeft="@dimen/zero_dep"
        app:contentInsetStart="@dimen/zero_dep">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/width_back_button"
            android:layout_height="@dimen/height_back_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@mipmap/back_button" />
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="@dimen/profile_pic_dimension"
        android:layout_height="@dimen/profile_pic_dimension"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/my_account_profile_pic"
        app:layout_marginTopPercent="20%" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfilePic"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/name_profile"
        android:textColor="@color/white_background"
        android:textSize="@dimen/text_size_profile_name"
        app:layout_marginTopPercent="10%" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/email_user"
        android:textColor="@color/white_background"
        android:textSize="@dimen/text_size_profile_name"
        app:layout_marginTopPercent="3%" />
</android.support.percent.PercentRelativeLayout>