<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/detail_background"
        android:contentDescription="@string/action_bar_google_map">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="@dimen/width_back_button"
            android:layout_height="@dimen/height_back_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@mipmap/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/title_google_map"
            android:text="@string/map_text"
            android:textSize="@dimen/text_size_map"
            android:textStyle="italic" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlActionBar" />

</RelativeLayout>