<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/rlCellDiscovery"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/cell_discovery">

        <ImageView
            android:id="@+id/imgPicTrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_pic"
            android:scaleType="centerCrop"
            android:src="@mipmap/pic_two" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_image"
            android:contentDescription="@string/transparent_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNameOfTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/name_trip"
                android:textColor="@color/white_background"
                android:textSize="@dimen/settings_dimens" />

            <View
                android:id="@+id/viewSplit"
                android:layout_width="@dimen/view_split_width"
                android:layout_height="@dimen/view_split_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/view_split_margin"
                android:background="@color/white_background"
                android:contentDescription="@string/view_for_split" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/view_split_margin"
                android:contentDescription="@string/type_of_trip"
                android:textColor="@color/white_background"
                android:textSize="@dimen/txt_type_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white_background" />
    </RelativeLayout>

</RelativeLayout>