<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rlHeaderDetailTrip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/header_detail_trip">

        <RelativeLayout
            android:id="@+id/rlContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_detail_trip">

            <ImageView
                android:id="@+id/imgProfileDetail"
                android:layout_width="@dimen/profile_pic_dimension_detail"
                android:layout_height="@dimen/profile_pic_dimension_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_dimens"
                android:contentDescription="@string/profile_image_detail_trip" />

            <TextView
                android:id="@+id/txtProfileCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgProfileDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_dimens"
                android:contentDescription="@string/creator_name"
                android:text=""
                android:textColor="@color/white_background"
                android:textSize="@dimen/text_size_settings" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNameOfTripCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgProfileDetail"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/name_trip"
                    android:text=""
                    android:textColor="@color/white_background"
                    android:textSize="@dimen/name_of_trip_creator_text_size" />

                <View
                    android:layout_width="@dimen/view_width"
                    android:layout_height="@dimen/view_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/settings_dimens"
                    android:background="@color/white_background" />

                <TextView
                    android:id="@+id/txtTypeCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgProfileDetail"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/settings_dimens"
                    android:contentDescription="@string/type_of_trip"
                    android:text=""
                    android:textColor="@color/white_background"
                    android:textSize="@dimen/text_size_settings" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/rlJoinTrip"
                android:layout_width="@dimen/join_trip_width"
                android:layout_height="@dimen/join_trip_height"
                android:layout_above="@+id/rlBottomBar"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/join_trip_margin"
                android:layout_marginEnd="@dimen/join_trip_margin"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/join_trip">

                <TextView
                    android:id="@+id/txtJoinTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/join_trip"
                    android:text=""
                    android:textColor="@color/white_background"
                    android:textSize="@dimen/join_trip_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlBottomBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_bar_height"
                android:layout_alignParentBottom="true"
                android:background="@color/white_background"
                android:contentDescription="@string/bottom_bar">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/map" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/image_map_background" />

                <RelativeLayout
                    android:id="@+id/rlJoinedFriends"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_bar_height"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/joined_container">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/text_joined"
                            android:text="@string/join_friends_text"
                            android:textColor="@color/detail_background"
                            android:textSize="@dimen/join_friends_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/fake_icon"
                            android:text="@string/v_text"
                            android:textColor="@color/detail_background"
                            android:textSize="@dimen/join_friends_text_size" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>